--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,13 @@ jobs:
           name: Compile code with optimizations
           command: swift build -c release
 
+jobs:
+  build:
+    branches:
+      only:
+        - master
+		- development
+
 workflows:
   version: 2
   tests:
