Add branches for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,5 +37,7 @@ workflows:
             branches:
               only:
                 - master
+				- development
+				- feature/.*
     jobs:
       - linux
